# upcdatabase

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  STRUCTURE.md  examples.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
src/upcdatabase/: __init__.py  client.py
tests/: __init__.py  test_client.py  test_upc_lookup.py
